# IRvana

./: IRvana.cpp  IRvana.sln  IRvana.vcxproj  IRvana.vcxproj.filters  LICENSE  README.md
IRgen/: README.md
IRgen/c/: Makefile.ir.mk  README.md
IRgen/cxx/: Makefile.ir.mk  README.md  detect_sdk.bat
IRgen/nim/: Makefile.ir.mk  README.md
IRgen/rust/: Cargo.toml  Makefile.ir.mk  README.md
IRvana/x64/Debug/: IRvana.exe.recipe  IRvana.ilk  vc143.idb
IRvana/x64/Debug/IRvana.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IRvana.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Interpreters/: README.md
Interpreters/Rust - MCJIT/: Cargo.toml  README.md
Interpreters/Rust - MCJIT/src/: main.rs
Interpreters/cxx - MCJIT/: CMakeLists.txt  README.md  main.cpp
Interpreters/cxx - ORC JIT/: README.md  main.cpp
Interpreters/lli - ORC JIT/: CMakeLists.txt  README.md
Maldev/: README.md
Maldev/IREncryption/: README.md  encryptIR.py  main.cpp
Maldev/RemoteLoad/: CMakeLists.txt  README.md  main.cpp
OLLVM/: README.md  main.c
OLLVM/vs_build/: ALL_BUILD.vcxproj  CMakeCache.txt  RISCVTargetParserTableGen.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  acc_gen.vcxproj.filters  cmake_install.cmake  intrinsics_gen.vcxproj  ollvm-pass.sln  omp_gen.vcxproj
OLLVM/vs_build/obfuscation/: LLVMObfuscationx.vcxproj  LLVMObfuscationx.vcxproj.filters  cmake_install.cmake
OLLVM/vs_build/obfuscation/LLVMObfuscationx.dir/Release/: LLVMObfuscationx.dll.recipe
OLLVM/vs_build/obfuscation/LLVMObfuscationx.dir/Release/LLVMObfuscationx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OLLVM/vs_build/obfuscation/Release/: LLVMObfuscationx.exp  LLVMObfuscationx.lib
OLLVM/vs_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
OLLVM/vs_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
OLLVM/vs_build/x64/Release/intrinsics_gen/: intrinsics_gen.recipe
OLLVM/vs_build/x64/Release/intrinsics_gen/intrinsics_gen.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  intrinsics_gen.lastbuildstate
